# DGCoderPi

./: .coderabbit.yaml  .fallowrc.json  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  playwright.config.ts  playwright.desktop.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.docs/: DGCoderPi.md
.github/: pull_request_template.md
.storybook/: main.ts  preview.ts
docs/: agent-harness-prd.md  diff-viewer-implementation-plan.md  diff-viewer-spec.md  left-panel-actions-and-branding-spec.md  openai-websocket-transport-notes.md  performance-guidance-assessment.md  source-control.md  thread-intents-implementation-plan.md
e2e/: workbench.browser.e2e.ts  workbench.desktop.e2e.ts  workbench.e2e.ts
scripts/: run-coderabbit-review.mjs  run-commit-gate.mjs  run-desktop-e2e.mjs  run-lint-changed.mjs  run-push-gate.mjs  run-rust-check.mjs  run-tauri-dev.mjs  setup-imagemagick.mjs  start-desktop-test-runtime.mjs  verify-runtime-policy.mjs
sidecar/: bridge-diagnostics.mjs  bridge-dispatch.mjs  bridge-errors.mjs  bridge-run-state.mjs  codex-auth.mjs  diff-analysis-schema.mjs  diff-analysis.mjs  docparser.mjs  message-content-format.mjs  pi-bridge.mjs  priority-utils.mjs  prompt-format.mjs  (+5 more)
src/: app.css  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis_store.rs  app_runtime.rs  commands.rs  diff_analysis.rs  diff_analysis_model_selection.rs  diff_engine.rs  diff_model.rs  lib.rs  main.rs  model.rs  pi_bridge.rs  project_storage.rs  state_store.rs
(+85 files in other folders)
